Connecting api and ui
