# lolappAPI/swagger.json
@@ -25,17 +25,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Summoner"
+                  "$ref": "#/components/schemas/SummonerApiResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Summoner"
+                  "$ref": "#/components/schemas/SummonerApiResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Summoner"
+                  "$ref": "#/components/schemas/SummonerApiResponse"
                 }
               }
             }
@@ -55,8 +55,7 @@
           },
           "createdAt": {
             "type": "string",
-            "format": "date-time",
-            "readOnly": true
+            "format": "date-time"
           },
           "updatedOn": {
             "type": "string",
@@ -89,6 +88,27 @@
           "summonerLevel": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "SummonerApiResponse": {
+        "type": "object",
+        "properties": {
+          "httpStatusCode": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "message": {
+            "type": "string",
+            "nullable": true
+          },
+          "itemCount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "result": {
+            "$ref": "#/components/schemas/Summoner"
           }
         },
         "additionalProperties": false
